--- a/index.html
+++ b/index.html
@@ -308,8 +308,9 @@
         <h2>Projects</h2>
 
         <div class="project-card">
-          <h3>JIO Insurance Integration Portal - Muthoot Finance</h3>
-          <p><strong>Role:</strong> Full Stack Developer</p>
+          <h3>EVERVENT Private Limited - JIO Insure Portal</h3>
+          <p><strong>Role:</strong> Backend Developer (Node.js)</p>
+          <p><strong>Duration:</strong> Sep 2023 - Present</p>
           <p>
             <strong>Technologies:</strong> Node.js, Express.js/NestJS, RESTful
             APIs, XML, MongoDB/SQL, Axios/Cheerio
@@ -324,11 +325,15 @@
             <li>
               Implemented KYC processes with third-party verification services
             </li>
-            <li>Developed secure proposal submission flows for insurers</li>
             <li>
-              Ensured seamless front-end and back-end communication for
-              real-time accuracy
+              Developed a custom Zoho Desk ticketing API and customized platform
+              features for Bimastreet client requirements
             </li>
+            <li>
+              Seamlessly integrated with the Bimastreet portal for unified
+              insurance services and real-time communication
+            </li>
+            <li>Developed secure proposal submission flows for insurers</li>
             <li>
               Enhanced API scalability to handle high request volumes
               efficiently
@@ -337,29 +342,33 @@
         </div>
 
         <div class="project-card">
-          <h3>Geospoc - An OLA Company</h3>
+          <h3>Geospoc (An OLA Company) - SDE-1</h3>
           <p><strong>Role:</strong> Full Stack Developer</p>
-          <p>
-            <strong>Technologies:</strong> Node.js, Express.js, MongoDB/SQL,
-            REST APIs, PHP
-          </p>
+          <p><strong>Duration:</strong> Jan 2022 - Sep 2023</p>
+          <p><strong>Project:</strong> Ola Maps - API Development</p>
           <h4>Key Achievements:</h4>
           <ul>
+            <li>
+              Developed an API to process large volumes of CSV data, modify it
+              according to requirements, and send it as query parameters via
+              Axios to retrieve user's initial and final positions in PNG format
+            </li>
+            <li>
+              Conducted R&D using Planetiler repository to generate complete
+              India map from scratch, optimizing benchmarking, latency, and data
+              size for MBTiles
+            </li>
+            <li>
+              Integrated PMTiles support into TileServer-GL-JS, enhancing Ola's
+              map-rendering server for efficient browser-based map display
+            </li>
             <li>
               Migrated a legacy PHP system to Node.js, improving performance,
               scalability & maintainability
             </li>
             <li>
-              Rewritten backend logic, optimized database interactions, and
-              implemented asynchronous processing
-            </li>
-            <li>
-              Ensured feature parity and seamless integration with the front-end
-              during the transition
-            </li>
-            <li>
-              Performed thorough testing and documented the migration process
-              for future updates
+              Optimized database interactions and implemented asynchronous
+              processing for improved performance
             </li>
           </ul>
         </div>
