Update new project index.html

--- a/index.html
+++ b/index.html
@@ -301,11 +301,60 @@
           <span class="tech-item">AWS</span>
           <span class="tech-item">Docker</span>
           <span class="tech-item">Azure</span>
+          <span class="tech-item">GraphQL</span>
         </div>
       </section>
 
       <section class="projects">
         <h2>Projects</h2>
+
+        <div class="project-card">
+          <h3>E-commerce Backend API</h3>
+          <p><strong>Technologies:</strong> NestJS, GraphQL, MongoDB, JWT</p>
+          <p>
+            Developed a NestJS-based e-commerce backend using GraphQL and
+            MongoDB, enabling efficient and scalable API interactions.
+          </p>
+          <p>
+            <strong>GitHub:</strong>
+            <a
+              href="https://github.com/hayatsingh-geospoc/Take-Home-Task-IDS-Backend.git"
+              target="_blank"
+              style="color: #00ff00; text-decoration: none"
+              >View Repository <i class="fab fa-github"></i
+            ></a>
+          </p>
+          <h4>Key Features & Achievements:</h4>
+          <ul>
+            <li>
+              Implemented comprehensive product catalog management system with
+              efficient pagination
+            </li>
+            <li>
+              Designed and integrated secure shopping cart functionality and
+              order processing workflows
+            </li>
+            <li>
+              Built optimized GraphQL resolvers for efficient data fetching and
+              MongoDB schema integration
+            </li>
+            <li>
+              Implemented robust JWT-based authentication and security
+              middleware
+            </li>
+            <li>
+              Developed comprehensive input validation and error handling
+              mechanisms
+            </li>
+            <li>
+              Created RESTful admin endpoints for backend operations management
+            </li>
+            <li>
+              Implemented automated testing suite for ensuring system
+              reliability
+            </li>
+          </ul>
+        </div>
 
         <div class="project-card">
           <h3>EVERVENT Private Limited - JIO Insure Portal</h3>
